<resources>
    <string name="app_name">BT Tracker</string>
    <string name="bt_tracker">BT Tracker</string>
    <string name="log_body_temperature">Log Body Temperature</string>
    <string name="check_normal_range">Check Normal Range</string>
    <string name="mechanism_of_fever">Mechanism of Fever</string>
    <string name="handing_fever">Handing Fever</string>
    <string name="please_log_your_temperature_today">Please log your temperature today</string>
    <string name="save">Save</string>
    <string name="why_do_we_have_fever">Why do we have fever?</string>
    <string name="useful_links_about_fever">Useful links about fever</string>
    <string name="normal_human_body_temperature_is_between_36_0_37_5">Normal human body temperature is between 36.0-37.5</string>
</resources>
