<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".MainActivity">

        <View
            android:id="@+id/titleBackground"
            android:layout_width="416dp"
            android:layout_height="186dp"
            android:background="#4BE66A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="36dp"
            android:text="@string/bt_tracker"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="76dp"
            android:layout_height="75dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/btn_star" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="375dp"
            android:layout_height="220dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBackground"
            app:layout_constraintVertical_bias="0.04000002">

            <TextView
                android:id="@+id/MainButton1"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="goToLogActivity"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/log_body_temperature"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FDFAFA" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/MainButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="goToNormalActivity"
                android:text="@string/check_normal_range"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FDFAFA" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/MainButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="goToMechanismActivity"
                android:text="@string/mechanism_of_fever"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FDFAFA" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MainButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#009688"
                android:onClick="goToHandleActivity"
                android:text="@string/handing_fever"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FDFAFA" />
        </LinearLayout>

        <Button
            android:id="@+id/setReminderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setReminder"
            android:text="Set Reminder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.423" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>